apps/argocd-ingress/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd-ingress
  labels:
    name: argocd-ingressa
